# sem_ker_receptionist

./: .env-example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  globals.py  main.py  plugins.py  prompt.py  pyproject.toml  requirements.txt  routes.py  utils.py
db/migrations/: 20250602063855_create_chat_sessions_table.sql  20250627205622_customer_table.sql  20250627205750_staff_table.sql  20250627205807_service_table.sql  20250627205823_stylist_service_table.sql  20250627205832_appointment_table.sql  20250627205848_product_table.sql  20250627205900_purchase_history_table.sql  20250628023733_alter_customer_table.sql  20250628023803_alter_service_table.sql  20250628113712_seed_sample_data.sql  20250628120707_seed_sample_data2.sql  20250628121425_seed_sample_data3.sql
local_agent/: Dockerfile  main.py  plugins.py  prompt.py  pyproject.toml  schemas.py
ui/: Dockerfile  app.py
